# BinaryTree

./: .gitignore  BinTree.cpp  BinTree.h  CMakeLists.txt  README.md
data/: bigger-tree.txt  search-tree.txt  subtree.txt  tree.txt
headers/: TreeNode.h
src/: TreeNode.cpp
